vpc.tf
// VPC

# ------------ VPC -----------------------------
resource "aws_vpc" "main_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "A2-Assigment2-VPC"
  }
}

// creates a "door" for your VPC to talk to the internet.
resource "aws_internet_gateway" "igw" {
  //comand "id" that AWS generates for the VPC automatically.
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "A2-Assignment2-IGW"
  }
}

# ------------- Subnets -----------------------------
# Private Subnet
resource "aws_subnet" "private_1" {
  vpc_id            = aws_vpc.main_vpc.id
  cidr_block        = "10.0.10.0/24"
  availability_zone = "us-east-1a"
  tags              = { Name = "A2-Private-Subnet-01" }
}

// Creating Public Subnet 01
resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.main_vpc.id //return ID generated by AWS
  cidr_block              = "10.0.1.0/24"       // VPC IP range (256 IPs)
  availability_zone       = "us-east-1a"        //This places the subnet in a specific physical data center.
  map_public_ip_on_launch = true                //it ensures instances in this subnet get a public IP (change it to True) so they can be tested directly

  tags = {
    Name = "A2-Public-Subnet-1"
  }
}

// Creating Public Subnet 02
resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.main_vpc.id //return ID generated by AWS
  cidr_block              = "10.0.2.0/24"       // VPC IP range (256 IPs)
  availability_zone       = "us-east-1b"        //This places the subnet in a specific physical data center.
  map_public_ip_on_launch = true                //it ensures instances in this subnet get a public IP (change it to True) so they can be tested directly

  tags = {
    Name = "A2-Public-Subnet-2"
  }
}

# 1. Create the Route Table (The Map)
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main_vpc.id

  route {
    cidr_block = "0.0.0.0/0" # This means "all traffic"
    gateway_id = aws_internet_gateway.igw.id
  }
}

# 2. Link the Subnet to the Map (The Association)
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public_rt.id
}
